--- a/config/i3/status.conf
+++ b/config/i3/status.conf
@@ -3,51 +3,37 @@
 # http://i3wm.org/docs/userguide.html#_configuring_i3bar
 
 general {
+        output_format = "none"
         colors = true
         interval = 2
 }
 
 #order += "ipv6"
-#order += "disk /"
-order += "disk /home"
-#order += "run_watch DHCP"
-#order += "run_watch VPN"
 #order += "wireless wlan0"
 #order += "ethernet eth0"
-#order += "battery 0"
-order += "cpu_temperature 0"
 order += "cpu_usage"
 order += "load"
-#order += "volume master"
-#order += "mempercent"
+order += "disk /"
+order += "battery 0"
+#order += "cpu_temperature 0"
+#order += "disk /home"
+order += "volume master"
 order += "time"
 
-#mempercent {
-#    format = "MEM:
+# Better to use icon/widget
+#wireless wlan0 {
+#        format_up = "W: (%quality at %essid) %ip"
+#        format_down = "W: down"
 #}
-
-wireless wlan0 {
-        format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
-}
-
-ethernet eth0 {
-        # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
-}
+#ethernet eth0 {
+#        # if you use %speed, i3status requires root privileges
+#        format_up = "E: %ip (%speed)"
+#        format_down = "E: down"
+#}
 
 battery 0 {
         #format = "%status %percentage %remaining"
         format = "%status %remaining"
-}
-
-run_watch DHCP {
-        pidfile = "/var/run/dhclient*.pid"
-}
-
-run_watch VPN {
-        pidfile = "/var/run/vpnc/pid"
 }
 
 time {
@@ -62,9 +48,10 @@ cpu_usage {
     format = "CPU:%usage"
 }
 
-cpu_temperature 0 {
-        format = "%degrees°C"
-}
+# Won't work on bsd
+#cpu_temperature 0 {
+#        format = "%degrees°C"
+#}
 
 disk "/" {
         format = "%free"
